# botte

./: .gitignore  Cargo.toml
config/: botte.toml
src/: boardcast.rs  config.rs  lib.rs  main.rs
src/api/: mod.rs  serve.rs  webhook.rs
src/bot/: command.rs  mod.rs  telegram.rs  traits.rs
src/mail/: mod.rs
src/webhook/: mod.rs
