[package]
name = "botte"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
log = "0.4.27"
pretty_env_logger = "0.5.0"
sysinfo = { version = "0.34.2" }
teloxide = { version = "0.15.0", features = [
    "webhooks",
    "macros",
    "sqlite-storage-rustls",
] }
tokio = { version = "1.44.2", features = ["full"] }

anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["http2"] }
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
shadow-rs = "*"
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
num_cpus = "1.16.0"
sys-info = "0.9.1"
utoipa = { version = "5.3.1",features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-axum = "0.2.0"
crossbeam = "0.8.4"
